--- a/TalismanChar.html
+++ b/TalismanChar.html
@@ -37,7 +37,7 @@
 
 <hr/>
 <h2>Skills</h2>
-<h5>Check boxes for trained skills</h5>
+<h5>Check boxes for trained skills. *Skills cannot be used untrained.</h5>
 <div class="2colrow">
   <div class="col">
     <label>Animal Handling</label>    <input type="text" name='attr_focusanimal' >    <select name="attr_animal_handling" class="dtype">
