--- a/TalismanChar.html
+++ b/TalismanChar.html
@@ -2,6 +2,7 @@
     <button type="action" name="act_character" >Character</button>
     <button type="action" name="act_combat" >Combat & Powers</button>
     <button type="action" name="act_spellsgear" >Spells & Gear</button>
+    <button type="action" name="act_journal" >Journal</button>
     <button type="action" name="act_npcsheet" >NPC Sheet</button>
 </div>
 <input type='hidden' class='sheet-tabstoggle' name='attr_sheetTab'  value='character'  />
@@ -230,7 +231,7 @@
   <h2>Ancestry & Class Abilities</h2>  
 <label style="width:135px;">Ability</label> <label style="width:140px;">Ability Notes</label>     <br>
 <fieldset class="repeating_SpecialAbility">
-<span><input style="width:140px;" type="text" name="attr_AbilityName" > <textarea name="attr_AbilityPower" style="vertical-align: top; width:690px; height:20px"></textarea></span>
+<span><input style="width:140px;" type="text" name="attr_AbilityName" > <textarea name="attr_AbilityPower" style="vertical-align: top; width:690px; height:40px"></textarea></span>
 <span><button type='roll' name='Call_Ability' value=' &{template:default} {{name=@{AbilityName}}} {{Effect=@{AbilityPower}}}'></button> </span>
         </fieldset>
   <hr/>
@@ -238,7 +239,7 @@
   <h2>Followers</h2>  
    <label style="width:140px;">Name</label> <label style="width:80px;">Type</label>  <label style="width:60px;">Life</label> <label style="margin-left:-20px;" >Loyalty</label>  <label style="margin-left:-80px;" >Follower Benefits</label><br>
 <fieldset class="repeating_Follower">
-                      <span><input style="width:140px;" type="text" name="attr_FollowerName" ></span><span><input style="margin-left:10px; width:80px;" type="text" name="attr_FollowerType" ></span><span><input style="margin-left:10px; width:50px;" type="number" name="attr_FollowerLife" ></span><span><input style="margin-left:10px; width:50px;" type="number" name="attr_FollowerLoyalty" > <textarea name="attr_FollowerBenefit" style="margin-left:10px; vertical-align: top; width:470px; height:20px"></textarea></span>
+                      <span><input style="width:140px;" type="text" name="attr_FollowerName" ></span><span><input style="margin-left:10px; width:80px;" type="text" name="attr_FollowerType" ></span><span><input style="margin-left:10px; width:50px;" type="number" name="attr_FollowerLife" ></span><span><input style="margin-left:10px; width:50px;" type="number" name="attr_FollowerLoyalty" > <textarea name="attr_FollowerBenefit" style="margin-left:10px; vertical-align: top; width:470px; height:40px"></textarea></span>
 <span><button type='roll' name='Call_Follower' value=' &{template:default} {{name=Follower Benefits}} {{Name=@{FollowerName}}} {{Type=@{FollowerType}}} {{Powers= **Spend Loyalty to use the following powers:**
 @{FollowerBenefit}}}'></button> </span>
 </fieldset>
@@ -380,6 +381,12 @@
 </div>
 
 </div>
+<div class='sheet-journal'>
+<hr/>
+<h2>Character Journal & Notes</h2><br>
+<textarea name="attr_pcjournal" style="width:800px; height:1500px"></textarea>
+</div>
+
 <div class='sheet-npcsheet'>
 <hr/>
 <h1>NPC/Stranger Character Sheet</h1>
@@ -396,7 +403,7 @@
 
 <hr/>
 <H2>Combat</H2>
-<h3><label style="width:100px;">Attack</label> <label style="width:100px;">Damage</label><label style="margin-left:10px; width:50px;">Dam</label><label style="width:80px;">Half Dam</label></h3><br>
+<h3><label style="width:100px;">Attack</label> <input style="margin-left:-50px; width:30px;" type="number" name="attr_attno" value='1'><label style="margin-left:30px;width:100px;">Damage</label><label style="margin-left:10px; width:50px;">Dam</label><label style="width:80px;">Half Dam</label></h3><br>
 
 <fieldset class="repeating_attack">
       <input type="text" name="attr_attack"> <input type="text" name="attr_npcDamage"> 
@@ -408,8 +415,10 @@
 <H2>Special Abilities</H2>
 <label style="width:135px;">NPC Ability</label> <label style="width:140px;">Ability Effect</label>     <br>
 <fieldset class="repeating_NPCAbility">
-<span><input style="width:140px;" type="text" name="attr_NPCAbility" > <textarea name="attr_NPCEffect" style="vertical-align: top; width:690px; height:40px"></textarea></span>
+<span><input style="width:140px;" type="text" name="attr_NPCAbility" > <textarea name="attr_NPCEffect" style="vertical-align: top; width:690px; height:80px"></textarea></span>
 <span><button type='roll' name='Call_NPCAbility' value=' &{template:default} {{name=@{NPCAbility}}} {{Effect=@{NPCEffect}}}'></button> </span>
+
+
         </fieldset>
 
 
@@ -417,14 +426,14 @@
 <H2>Benefits & Banes</H2>
 <label style="width:135px;">Power</label> <label style="width:140px;">Effect</label>     <br>
 <fieldset class="repeating_NPCBenBan">
-<span><input style="width:140px;" type="text" name="attr_NPCBenBan" > <textarea name="attr_BenBanEffect" style="vertical-align: top; width:690px; height:20px"></textarea></span>
+<span><input style="width:140px;" type="text" name="attr_NPCBenBan" > <textarea name="attr_BenBanEffect" style="vertical-align: top; width:690px; height:80px"></textarea></span>
 <span><button type='roll' name='Call_Ability' value=' &{template:default} {{name=@{NPCBenBan}}} {{Effect=@{BenBanEffect}}}'></button> </span>
         </fieldset>
 
 
 </div>
 <script type="text/worker">
-    const buttonlist = ["character","combat","spellsgear","npcsheet"];
+    const buttonlist = ["character","combat","spellsgear","journal","npcsheet"];
     buttonlist.forEach(button => {
         on(`clicked:${button}`, function() {
             setAttrs({
